syntax = "proto3";

package api;
option csharp_namespace = "API";

import "Services/proto/empty.proto";

service InfSystem {
  rpc PingServer (Empty) returns (AliveMessage) {}
}

message AliveMessage {
}
